{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 37,
  "lineage": "9e64e9e7-ba4f-41c9-cc37-9295a024449d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip_elastic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ea0e9403642d3b34",
            "domain": "vpc",
            "id": "eipalloc-0ea0e9403642d3b34",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-228-34-62.compute-1.amazonaws.com",
            "public_ip": "34.228.34.62",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eae524c9d49cbf7e",
            "domain": "vpc",
            "id": "eipalloc-0eae524c9d49cbf7e",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-87-176-150.compute-1.amazonaws.com",
            "public_ip": "54.87.176.150",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Internet_Gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:046746486277:internet-gateway/igw-0f0a5e9dc890e432a",
            "id": "igw-0f0a5e9dc890e432a",
            "owner_id": "046746486277",
            "tags": {
              "Name": "Internet-GTW_2"
            },
            "tags_all": {
              "Name": "Internet-GTW_2"
            },
            "vpc_id": "vpc-0e5cc689ddec29645"
          },
          "dependencies": [
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT_GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ea0e9403642d3b34",
            "connectivity_type": "public",
            "id": "nat-01f663c920723eeb5",
            "network_interface_id": "eni-071474d9447c2dbf2",
            "private_ip": "10.1.4.23",
            "public_ip": "34.228.34.62",
            "subnet_id": "subnet-00ef37b5be56b3353",
            "tags": {
              "Name": "NAT_Internet-gw_2"
            },
            "tags_all": {
              "Name": "NAT_Internet-gw_2"
            }
          },
          "dependencies": [
            "aws_eip.ip_elastic",
            "aws_internet_gateway.Internet_Gw",
            "aws_subnet.private_subnets",
            "aws_vpc.vpc_main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eae524c9d49cbf7e",
            "connectivity_type": "public",
            "id": "nat-019851c0b233a240b",
            "network_interface_id": "eni-05f6ed73dce20db3b",
            "private_ip": "10.1.5.83",
            "public_ip": "54.87.176.150",
            "subnet_id": "subnet-0a43867342311581d",
            "tags": {
              "Name": "NAT_Internet-gw_2"
            },
            "tags_all": {
              "Name": "NAT_Internet-gw_2"
            }
          },
          "dependencies": [
            "aws_eip.ip_elastic",
            "aws_internet_gateway.Internet_Gw",
            "aws_subnet.private_subnets",
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public-Subnet-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:046746486277:route-table/rtb-07671bdbe43d2d6c8",
            "id": "rtb-07671bdbe43d2d6c8",
            "owner_id": "046746486277",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f0a5e9dc890e432a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT for Internet GW_2"
            },
            "tags_all": {
              "Name": "RT for Internet GW_2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5cc689ddec29645"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Internet_Gw",
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT-IG-Association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075f61a179f20187c",
            "route_table_id": "rtb-07671bdbe43d2d6c8",
            "subnet_id": "subnet-010fd499e33d5e925"
          },
          "dependencies": [
            "aws_internet_gateway.Internet_Gw",
            "aws_route_table.Public-Subnet-RT",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc_main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea87b5a102ff89b0",
            "route_table_id": "rtb-07671bdbe43d2d6c8",
            "subnet_id": "subnet-0854af50a0e54ed30"
          },
          "dependencies": [
            "aws_internet_gateway.Internet_Gw",
            "aws_route_table.Public-Subnet-RT",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws_secgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:046746486277:security-group/sg-09731f7676d1e56cb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-09731f7676d1e56cb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "179.125.29.146/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 22
              }
            ],
            "name": "terraform-20221114160205896000000001",
            "name_prefix": "terraform-",
            "owner_id": "046746486277",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "GRUPOSEC_2"
            },
            "tags_all": {
              "Name": "GRUPOSEC_2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5cc689ddec29645"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:046746486277:subnet/subnet-022b333383c9d9eb3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-022b333383c9d9eb3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "046746486277",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DB Subnet_2 1"
            },
            "tags_all": {
              "Name": "DB Subnet_2 1"
            },
            "vpc_id": "vpc-0e5cc689ddec29645"
          },
          "dependencies": [
            "aws_vpc.vpc_main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:046746486277:subnet/subnet-0300cc34cb7e2ee14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0300cc34cb7e2ee14",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "046746486277",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DB Subnet_2 2"
            },
            "tags_all": {
              "Name": "DB Subnet_2 2"
            },
            "vpc_id": "vpc-0e5cc689ddec29645"
          },
          "dependencies": [
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:046746486277:subnet/subnet-00ef37b5be56b3353",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ef37b5be56b3353",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "046746486277",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet_2 1"
            },
            "tags_all": {
              "Name": "Private Subnet_2 1"
            },
            "vpc_id": "vpc-0e5cc689ddec29645"
          },
          "dependencies": [
            "aws_vpc.vpc_main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:046746486277:subnet/subnet-0a43867342311581d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a43867342311581d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "046746486277",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet_2 2"
            },
            "tags_all": {
              "Name": "Private Subnet_2 2"
            },
            "vpc_id": "vpc-0e5cc689ddec29645"
          },
          "dependencies": [
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:046746486277:subnet/subnet-010fd499e33d5e925",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-010fd499e33d5e925",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "046746486277",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet_2 1"
            },
            "tags_all": {
              "Name": "Public Subnet_2 1"
            },
            "vpc_id": "vpc-0e5cc689ddec29645"
          },
          "dependencies": [
            "aws_vpc.vpc_main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:046746486277:subnet/subnet-0854af50a0e54ed30",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0854af50a0e54ed30",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "046746486277",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet_2 2"
            },
            "tags_all": {
              "Name": "Public Subnet_2 2"
            },
            "vpc_id": "vpc-0e5cc689ddec29645"
          },
          "dependencies": [
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:046746486277:vpc/vpc-0e5cc689ddec29645",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0e66f8276b172c97c",
            "default_route_table_id": "rtb-07eca0f302af9ab8f",
            "default_security_group_id": "sg-05a9894a1438d1483",
            "dhcp_options_id": "dopt-00220604139ac1609",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e5cc689ddec29645",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07eca0f302af9ab8f",
            "owner_id": "046746486277",
            "tags": {
              "Name": "vpc_desafio_2"
            },
            "tags_all": {
              "Name": "vpc_desafio_2"
            }
          }
        }
      ]
    }
  ]
}